--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "author": "MP",
   "license": "ISC",
   "dependencies": {
+    "@types/uuid": "^9.0.2",
     "dotenv": "^16.3.1",
     "nodemon": "^2.0.22",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.3.2"
   }
 }
