--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,13 @@
 {   "include": ["src/**/*.json"],
     "compilerOptions": {
     "esModuleInterop": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "outDir": "./dist/",
+    "noImplicitAny": true,
+    "module": "es6",
+    "target": "es5",
+    "jsx": "react",
+    "allowJs": true,
+    "moduleResolution": "node"
   }
 }
