--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "description": "Third task ",
   "main": "app.ts",
   "scripts": {
-    "start": "npx nodemon ./app.ts",
-    "start:prod": "webpack",
-    "start:bundle":"nodemon dist/bundle.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx nodemon ./src/app.ts",
+    "start:prod": "npm run build && node ./dist/bundle.js",
+    "start:bundle": "nodemon dist/bundle.js",
+    "build": "webpack",
+    "test": "jest"
   },
   "author": "MP",
   "license": "ISC",
   "dependencies": {
     "@types/uuid": "^9.0.2",
     "dotenv": "^16.3.1",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
     "uuid": "^9.0.0",
     "webpack": "^5.88.1"
   },
