--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {   "include": ["src/**/*.json"],
     "compilerOptions": {
-    "esModuleInterop": true,
+      "target": "es6",
+      "module": "commonjs",
+      "esModuleInterop": true,
     "resolveJsonModule": true,
     "outDir": "./dist/",
     "noImplicitAny": true,
-    "module": "es6",
-    "target": "es5",
     "jsx": "react",
     "allowJs": true,
     "moduleResolution": "node"
