--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.ts",
   "scripts": {
     "start": "npx nodemon ./src/app.ts",
-    "start:prod": "npm run build && node ./dist/bundle.js",
+    "start:dev": "cross-env NODE_ENV=development NODE_NO_WARNINGS=1 nodemon",
+    "start:prod": "cross-env NODE_ENV=production npm run build && node ./dist/bundle.js",
     "start:bundle": "nodemon dist/bundle.js",
     "build": "webpack",
     "test": "jest"
@@ -14,16 +15,19 @@
   "license": "ISC",
   "dependencies": {
     "@types/uuid": "^9.0.2",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
-    "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "uuid": "^9.0.0",
     "webpack": "^5.88.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.2",
     "@types/node": "^20.3.2",
+    "jest": "^29.5.0",
     "node-polyfill-webpack-plugin": "^2.0.1",
+    "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
     "typescript": "^5.1.6",
     "webpack-cli": "^5.1.4"
